--- a/popup/popup.html
+++ b/popup/popup.html
@@ -14,6 +14,7 @@
     <input id="fue" type="checkbox" class="form-check-input">
     <span>Enable redirections</span><br>
     <textarea class="form-control mb-2" type="text" id="list"></textarea>
+    <small>Use ":" before an word for exact a match</small> <br>
 
     <input id="dyr" type="checkbox" class="form-check-input">
     <span>Disable youtube recomendations</span>
